Fix vue-clip progress freeze & no crop regression Enable modal body overflowing detection

--- a/resources/assets/sass/cms.scss
+++ b/resources/assets/sass/cms.scss
@@ -1,8 +1,8 @@
-html, body {
+html {
   height: 100%;
 }
 
-#sharp-app {
+body {
   min-height:  100%;
 }
 
