--- a/resources/assets/sass/components/_Modal.scss
+++ b/resources/assets/sass/components/_Modal.scss
@@ -7,7 +7,7 @@
     width: 100%;
     height: 100%;
     top: 0;
-    bottom: 0;
+    left: 0;
     outline: 0;
     overflow: hidden;
     display: none;
